# michaeltinsley.github.io

./: 404.html  CNAME  LICENSE  README.md  _config.yml  about.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: deploy.yml
2025/09/03/hello-world/: index.html
2025/09/09/taming-my-dotfiles-with-gnu-stow/: index.html
_posts/: 2021-04-07-test.md
archive/2025/: index.html
category/projects/: index.html
category/tools/: index.html
docs/: .authors.yml  index.md
docs/posts/2025/: dotfile-management.md  hello-world.md
docs/stylesheets/: extra.css
search/: search_index.json
