[project]
name = "michaeltinsley-github-io"
version = "0.1.0"
description = "MKDocs Material blog."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-git-committers-plugin>=0.2.3",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.18",
    "mkdocs-material-extensions>=1.3.1",
]
